0028980: Coding rules - suppress GCC compiler warnings -Warray-bounds within AdvApp2Var